# openQ4

./: .gitignore  AGENTS.md  BUILDING.md  README.md  TECHNICAL.md  TODO.md  meson.build  meson_options.txt
.github/scripts/: announce-release-discord.mjs
.github/workflows/: commit-validation.yml  discord-release.yml  macos-debug.yml  manual-release.yml  nightly-builds.yml  push-verification.yml
assets/: README.html
assets/docs/: README.html
assets/linux/: openq4.desktop.in
assets/release/: README.html
content/baseoq4/: meson.build  mod.json.in
doc/: quake4-bse-research-and-implementation-plan.md
docs-dev/: gl-renderer-modernization.md  high-framerate-rendering-plan.md  input-key-matrix.md  macos-vm-testing-workflow.md  platform-support.md  quake4-bse-research-and-implementation-plan.md  release-completion.md  renderdoc-workflow.md  renderer-validation-matrix.md  retail-q4-vs-openq4-engine-cvars.md  sdl3-linux-macos-migration.md  settings-menu-registry.json  settings-menu-structure.md
docs-dev/plans/: 2026-05-13-clustered-hybrid-gl-renderer.md  2026-05-14-renderer-audit-remediation-plan.md  2026-05-14-renderer-recovery-performance-parity.md  2026-06-04-settings-menu-refactor.md  2026-06-13-lens-flares.md  (+6 more)
docs-user/: display-settings.md  getting-started.md  input-settings.md  light-grids.md  shadow-mapping.md  steam-deck.md
openq4/: meson.build
reports/: unsupported-material-map-usage.txt  unsupported-materials.json
subprojects/glew/: meson.build  meson_options.txt
subprojects/glew/include/GL/: glew.h  wglew.h
user-docs/: display-settings.md
(+595 files in other folders)
